--- a/src/app/pages/post/post.component.html
+++ b/src/app/pages/post/post.component.html
@@ -1,4 +1,9 @@
 <h2>Posts</h2>
-@for(p of posts;track p){
-    <app-card [post]="p"/>
+@if (posts$ | async; as posts){
+    @for(p of posts;track p){
+        <app-card [post]="p"/>
+    }
+}
+@else{
+    <p>no posts found</p>
 }
