--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -7,5 +7,8 @@
         <li>
             <a routerLink="posts" routerLinkActive="active"  [routerLinkActiveOptions]="{exact:true}">posts</a>
         </li>
+        <li>
+            <a routerLink="create-post" routerLinkActive="active"  [routerLinkActiveOptions]="{exact:true}">Create post</a>
+        </li>
     </ul>
 </div>
