added edit and delete buttons in posts component

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -6,4 +6,8 @@
             <span class="tag">{{t}}</span>
         }
     </div>
+    <div class="btn-container">
+        <button class="edit-btn">edit</button>
+        <button class="dlt-btn">delete</button>
+    </div>
 </div>
