added delete post functionality with redux and delete logger

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -7,7 +7,7 @@
         }
     </div>
     <div class="btn-container">
-        <button class="edit-btn">edit</button>
-        <button class="dlt-btn">delete</button>
+        <button class="edit-btn" >edit</button>
+        <button class="dlt-btn" (click)="delete()">delete</button>
     </div>
 </div>
